# teenytt

./: CHANGELOG.org  ChangeLog.md  LICENSE  README.md  README.org  cabal.project  hie.yaml  package.yaml  stack.yaml  teenytt.cabal
app/: Main.hs
emacs/: teenytt.el
examples/: bench-results.txt  bench.teenytt  demo.teenytt  demo.tt
src/TeenyTT/Base/: ByteString.hs  Diagnostic.hs  Env.hs  Ident.hs  Location.hs  Prec.hs  Pretty.hs  SymbolTable.hs
src/TeenyTT/Core/: Compute.hs  Conversion.hs  Domain.hs  Env.hs  Error.hs  Eval.hs  Ident.hs  NbE.hs  Position.hs  Pretty.hs  Quote.hs  Splice.hs  Syntax.hs  Tactic.hs  TermBuilder.hs  Types.hs
src/TeenyTT/Core/Pretty/: Unicode.hs
src/TeenyTT/Core/Refiner/: El.hs  Hole.hs  Monad.hs  Nat.hs  Pi.hs  Probe.hs  README.md  Small.hs  Structural.hs  Univ.hs
src/TeenyTT/Elaborator/: ConcreteSyntax.hs  Macros.hs  Monad.hs  Refiner.hs  Tactic.hs
src/TeenyTT/Elaborator/Refiner/: Nat.hs  Pi.hs  Sigma.hs  Structural.hs  Univ.hs
src/TeenyTT/Frontend/: Command.hs  ConcreteSyntax.hs  Driver.hs  Elaborator.hs  Parser.hs  Position.hs
src/TeenyTT/Frontend/Driver/: Debug.hs  Monad.hs
src/TeenyTT/Frontend/Parser/: Grammar.y  Lexer.x  Monad.hs  Token.hs
src/TeenyTT/Frontend/Parser/Lexer/: Monad.hs
test/: Spec.hs
test/Spec/TeenyTT/Base/: SymbolTable.hs
