cabal-version:      3.4
name:               teenytt
version:            0.1.0.0

synopsis: A small, didactic proof assistant

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Reed Mullanix
maintainer:         reedmullanix@gmail.com

-- A copyright notice.
copyright: 2022 Reed Mullanix
-- copyright:
-- category:
extra-source-files:
  README.org
  CHANGELOG.org

library
    exposed-modules:
        -- Base
        TeenyTT.Base.ByteString
        TeenyTT.Base.Diagnostic
        TeenyTT.Base.Env
        TeenyTT.Base.Ident
        TeenyTT.Base.Location
        TeenyTT.Base.Prec
        TeenyTT.Base.Pretty
        TeenyTT.Base.SymbolTable
        -- Core
        TeenyTT.Core.Conversion
        TeenyTT.Core.Domain
        TeenyTT.Core.Eval
        TeenyTT.Core.NbE
        TeenyTT.Core.Quote
        TeenyTT.Core.Syntax
        TeenyTT.Core.Types
        -- Elaborator
        TeenyTT.Elaborator.ConcreteSyntax
        TeenyTT.Elaborator.Monad
        TeenyTT.Elaborator.Tactic
        -- Frontend
        TeenyTT.Frontend.Command
        TeenyTT.Frontend.Driver
        TeenyTT.Frontend.Driver.Monad
        TeenyTT.Frontend.Parser
        TeenyTT.Frontend.Parser.Lexer
        TeenyTT.Frontend.Parser.Grammar
        TeenyTT.Frontend.Parser.Monad
        TeenyTT.Frontend.Parser.Token
    hs-source-dirs: src
    ghc-options:
        -- Note that -Wall doesn't enable /all/ warnings
        -- See https://ghc.gitlab.haskell.org/ghc/doc/users_guide/using-warnings.html
        -- for a list of all warnings and their descriptions.
        -fno-show-valid-hole-fits
        -Wall
        -Wno-unused-top-binds
        -Wno-unused-matches
        -- In general, it's good practice to specify /how/ we are deriving something.
        -Wmissing-deriving-strategies
        -Wunticked-promoted-constructors
        -Wmissing-export-lists
        -Wmissed-specialisations
    default-extensions:
        -- Syntactic Extensions
        BlockArguments
        ImportQualifiedPost
        LambdaCase
        OverloadedStrings
        -- Deriving Extensions
        -- Note that we use -Wmissing-deriving-strategies, so any deriving clause
        -- must have a strategy attached.
        DeriveAnyClass
        DeriveFoldable
        DeriveFunctor
        DeriveTraversable
        DeriveGeneric
        DerivingStrategies
        DerivingVia
        GeneralizedNewtypeDeriving
        StandaloneDeriving
        -- Record Extensions
        DuplicateRecordFields
        NoFieldSelectors
        NamedFieldPuns
        OverloadedRecordDot
        RecordWildCards
        -- Pattern Extensions
        ViewPatterns
        -- Strictness Extensions
        BangPatterns
        StrictData
        -- Typeclass Extensions
        FlexibleContexts
        FlexibleInstances
        -- Typesystem Extensions
        RankNTypes
        ScopedTypeVariables
    build-depends:
         array >= 0.5
       , base >=4.16 && <5
       , bytestring >= 0.11
       , deepseq >= 1.4
       , primitive >= 0.7
       , hashable >= 1.4
       , mtl >= 2.3
       , prettyprinter >= 1.7
       -- We want to use the UTF-8 encoding
       , text >= 2.0
       , transformers >= 0.6
       , utf8-string
    build-tool-depends:
         alex:alex >= 3.2
       , happy:happy >= 1.2
    default-language: Haskell2010

executable teenytt
    main-is:          Main.hs
    default-extensions:
        -- Syntactic Extensions
        BlockArguments
        ImportQualifiedPost
        LambdaCase
        OverloadedStrings
        -- Deriving Extensions
        -- Note that we use -Wmissing-deriving-strategies, so any deriving clause
        -- must have a strategy attached.
        DeriveAnyClass
        DeriveFoldable
        DeriveFunctor
        DeriveTraversable
        DeriveGeneric
        DerivingStrategies
        DerivingVia
        GeneralizedNewtypeDeriving
        StandaloneDeriving
        -- Record Extensions
        DuplicateRecordFields
        NoFieldSelectors
        NamedFieldPuns
        OverloadedRecordDot
        RecordWildCards
        -- Pattern Extensions
        ViewPatterns
        -- Strictness Extensions
        StrictData
        -- Typeclass Extensions
        FlexibleContexts
        FlexibleInstances
        -- Typesystem Extensions
        ScopedTypeVariables
    build-depends:
        base >=4.16 && <5
      , optparse-applicative >= 0.17
      , teenytt
    hs-source-dirs:   app
    default-language: Haskell2010

test-suite teenytt-test
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    hs-source-dirs:
        test
    other-modules:
        Spec.TeenyTT.Base.SymbolTable
    default-extensions:
        -- Syntactic Extensions
        BlockArguments
        ImportQualifiedPost
        LambdaCase
        OverloadedStrings
        -- Deriving Extensions
        -- Note that we use -Wmissing-deriving-strategies, so any deriving clause
        -- must have a strategy attached.
        DeriveAnyClass
        DeriveFoldable
        DeriveFunctor
        DeriveTraversable
        DeriveGeneric
        DerivingStrategies
        DerivingVia
        GeneralizedNewtypeDeriving
        StandaloneDeriving
        -- Record Extensions
        DuplicateRecordFields
        NoFieldSelectors
        NamedFieldPuns
        OverloadedRecordDot
        RecordWildCards
        -- Pattern Extensions
        ViewPatterns
        -- Strictness Extensions
        StrictData
        -- Typeclass Extensions
        FlexibleContexts
        FlexibleInstances
        -- Typesystem Extensions
        ScopedTypeVariables
    build-depends:
         base >=4.16 && <5
       , hashable >= 1.4
       , hspec >= 2.10
       , hedgehog >= 1.1.1
       , hspec-hedgehog >= 0.0.1.2
       , primitive >= 0.7
       , teenytt